dino dash mobile check

--- a/disneylinebuddy/dash.html
+++ b/disneylinebuddy/dash.html
@@ -37,9 +37,15 @@
       <div class="colorWrapper"></div>
       <h2>Jump Game</h2>
       <div class="game">
-        <div class="char">🦖</div>
+        <div>
+          <img class="char" src="images/dino.svg" />
+        </div>
+        <!-- <div><img class="char" src="images/woody.svg" /></div> -->
+        <div class="">
+          <img class="getPoints" src="images/star.svg" />
+        </div>
         <div class="gameOver"></div>
-        <div class="block">🍔</div>
+        <div><img class="block" src="images/pixarball.svg" /></div>
       </div>
       <div class="buttonBox">
         <input type="submit" class="startBtn" value="Start Game!" />
