--- a/disneylinebuddy/dash.html
+++ b/disneylinebuddy/dash.html
@@ -41,11 +41,14 @@
           <img class="char" src="images/dino.svg" />
         </div>
         <!-- <div><img class="char" src="images/woody.svg" /></div> -->
+        <div class="pointsBox"></div>
         <div class="">
           <img class="getPoints" src="images/star.svg" />
+          <div></div>
         </div>
-        <div class="gameOver"></div>
+
         <div><img class="block" src="images/pixarball.svg" /></div>
+        <div class="gameOver"></div>
       </div>
       <div class="buttonBox">
         <input type="submit" class="startBtn" value="Start Game!" />
