a bunch of stuff, most importantly, partially working timezone script!!

--- a/disneylinebuddy/index.html
+++ b/disneylinebuddy/index.html
@@ -15,7 +15,7 @@
       href="https://fontlibrary.org//face/waltograph"
       type="text/css"
     />
-    
+
     <!-- <script src="js/script.js" defer></script> -->
 
     <link rel="shortcut icon" href="../favicon.ico" />
@@ -19869,14 +19869,15 @@
         <div class="navBox"></div>
       </header>
 
-      <div>
+      <div class="backgroundWrapper">
         <div class="navTileBox">
           <ul class="tileList"></ul>
         </div>
+        <div class="colorWrapper"></div>
         <img src="images/mickey-sketchBW.png" alt="sketched mickey mouse" />
       </div>
     </main>
-    <footer>&copy;<span id="currentyear"></span> | Ashley Zufelt</footer>
+    <footer class="copyright">&copy;<span id="currentyear" ></span> | Ashley Zufelt</footer>
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
     <script>
       WebFont.load({
