--- a/disneylinebuddy/character.html
+++ b/disneylinebuddy/character.html
@@ -59,6 +59,9 @@
           <ul class="returnresults"></ul>
         </div>
       </div>
+      <footer class="copyright">
+        &copy;<span id="currentyear"></span> | Ashley Zufelt
+      </footer>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
