--- a/disneylinebuddy/tictactoe.html
+++ b/disneylinebuddy/tictactoe.html
@@ -70,6 +70,7 @@
       </div>
  <h1 class="gameStatus"></h1>
     </section>
+    <footer class="copyright">&copy;<span id="currentyear" ></span> | Ashley Zufelt</footer>
   </main>
 
   <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
