tic tac toe pop up

--- a/disneylinebuddy/tictactoe.html
+++ b/disneylinebuddy/tictactoe.html
@@ -68,6 +68,11 @@
         <div data-cell-index="7" class="box middle bottom"></div>
         <div data-cell-index="8" class="box right bottom"></div>
       </div>
+      <div class="popupWrapper closebutton">
+      <!-- <div class="popup hide">
+        <span class="closebutton">✕</span>
+      </div> -->
+    </div>
  <h1 class="gameStatus"></h1>
     </section>
     <footer class="copyright">&copy;<span id="currentyear" ></span> | Ashley Zufelt</footer>
