--- a/disneylinebuddy/weather.html
+++ b/disneylinebuddy/weather.html
@@ -41,7 +41,7 @@
         class="minniebackgroundimg"
       />
       <div class="weatherWrapper">
-        <h2>Which park location do you want to check the weather for?</h2>
+        <h2>Weather you're there or not—<br> get the temps at your favorite Park!</h2>
         <label for="parks"></label>
 
         <select name="parkList" id="parkList" class="parkList">
