--- a/disneylinebuddy/character.html
+++ b/disneylinebuddy/character.html
@@ -47,6 +47,7 @@
             id="character"
             class="characterValue"
             name="character"
+            required
           />
           <input type="button" class="button characterSearch" value="Search" />
         </form>
@@ -59,9 +60,6 @@
           <ul class="returnresults"></ul>
         </div>
       </div>
-      <footer class="copyright">
-        &copy;<span id="currentyear"></span> | Ashley Zufelt
-      </footer>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
