--- a/disneylinebuddy/rather.html
+++ b/disneylinebuddy/rather.html
@@ -44,31 +44,18 @@
           <div class="rather-card">
             <div class="rather-card-inner">
               <div class="rather-card-front" data-key="">
-                <h2 class="ratherQ"></h2>
+                <h2 class="ratherQ">Would You Rather...</h2>
               </div>
-              <div class="rather-card-back" data-key=""></div>
+              <div class="rather-card-back" data-key="">
+                <div class="backratherQ"></div>
+              </div>
             </div>
           </div>
         </div>
-        <!-- <div class="cubeWrapper">
-        <div class="perspective">
-          <div class="cube">
-            <div class="cube-face cube-face-front">Front</div>
-            <div class="cube-face cube-face-back">Back</div>
-            <div class="cube-face cube-face-left">Left</div>
-            <div class="cube-face cube-face-right">Right</div>
-            <div class="cube-face cube-face-top">Top</div>
-            <div class="cube-face cube-face-bottom">Bottom</div>
-          </div>
-        </div>
-      </div> -->
         <div class="ratherBtn">
           <span>?</span>
         </div>
       </div>
-      <footer class="copyright">
-        &copy;<span id="currentyear"></span> | Ashley Zufelt
-      </footer>
     </main>
 
     <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
