better. Welcome Nav tiles still not working.

--- a/disneylinebuddy/main.html
+++ b/disneylinebuddy/main.html
@@ -26,7 +26,7 @@
         ><img
           src="images/single-balloon.svg"
           alt="mickey mouse balloon"
-          class="navBalloon"
+          class="navBalloon balloonHover"
       /></a>
     </header>
     <main class="mainPage">
